--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "coderubix/word-search",
+    "name": "coderubix/wordsearch",
     "type": "library",
     "description": "Word search generator.",
     "homepage": "https://github.com/developer-ashok/wordsearch",
